--- a/Exploratory_Data_Analysis.ipynb
+++ b/Exploratory_Data_Analysis.ipynb
@@ -21,6 +21,16 @@
     {
       "cell_type": "markdown",
       "source": [
+        "[![View filled on Github](https://img.shields.io/static/v1.svg?logo=github&label=Repo&message=View%20On%20Github&color=lightgrey)](https://github.com/matteo-bertini/Facial-Expression-Recognition)\n",
+        "[![Open filled In Collab](https://colab.research.google.com/assets/colab-badge.svg)](https://github.com/matteo-bertini/Facial-Expression-Recognition/blob/main/Exploratory_Data_Analysis.ipynb)\n"
+      ],
+      "metadata": {
+        "id": "uALShZklA50-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Import Libaries\n",
         "The libraries needed to do Exploratory Data Analysis are imported here."
       ],
@@ -46,7 +56,7 @@
         },
         "outputId": "0ab6f59e-c2ff-42fa-8866-ecd2cbd3abbc"
       },
-      "execution_count": 186,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +113,7 @@
         "id": "TA0IzFVKA4Xj",
         "outputId": "5e38bc27-1a9e-469f-df1c-8493af50cf4d"
       },
-      "execution_count": 187,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -329,7 +339,7 @@
         "id": "glJ7kFVjgfML",
         "outputId": "92417490-c8c6-4747-a1e6-0a0dce6c5105"
       },
-      "execution_count": 188,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -564,7 +574,7 @@
         "outputId": "8cb418d0-f845-4a4d-8c54-c6b78c3466b3",
         "id": "m1wUN2n8eKUA"
       },
-      "execution_count": 189,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -818,7 +828,7 @@
         "id": "k8xRI1pUVujp",
         "outputId": "9dab6681-d617-4dba-8149-4cd738b8f35a"
       },
-      "execution_count": 190,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -864,7 +874,7 @@
         "id": "DJBz3vC5bAox",
         "outputId": "fd396c77-387e-4f5a-c1e7-1ec71fd13594"
       },
-      "execution_count": 191,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1149,7 +1159,7 @@
         "id": "ijAmbMFggvO7",
         "outputId": "a1a5f8ca-95da-49a1-de36-2303ee5064dc"
       },
-      "execution_count": 192,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1210,7 +1220,7 @@
         "id": "HbYYjct01SoD",
         "outputId": "edfd5208-b573-41d6-9e72-b3666195f4b5"
       },
-      "execution_count": 193,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
