--- a/Exploratory_Data_Analysis.ipynb
+++ b/Exploratory_Data_Analysis.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "Rk06vTRNUEvO",
         "VifBwzy6eZBo"
       ]
     },
@@ -22,15 +21,8 @@
       "cell_type": "markdown",
       "source": [
         "[![View filled on Github](https://img.shields.io/static/v1.svg?logo=github&label=Repo&message=View%20On%20Github&color=lightgrey)](https://github.com/matteo-bertini/Facial-Expression-Recognition)\n",
-        "[![Open filled In Collab](https://colab.research.google.com/assets/colab-badge.svg)](https://github.com/matteo-bertini/Facial-Expression-Recognition/blob/main/Exploratory_Data_Analysis.ipynb)\n"
-      ],
-      "metadata": {
-        "id": "uALShZklA50-"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
+        "[![Open filled In Collab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/matteo-bertini/Facial-Expression-Recognition/blob/main/Exploratory_Data_Analysis.ipynb)\n",
+        "\n",
         "# Import Libaries\n",
         "The libraries needed to do Exploratory Data Analysis are imported here."
       ],
