--- a/VGG19.ipynb
+++ b/VGG19.ipynb
@@ -55,7 +55,7 @@
         "id": "wxv5Kt43IEWW",
         "outputId": "1f7e9af2-13d2-405a-87ab-633c498cccee"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -99,18 +99,8 @@
         "trusted": true,
         "id": "VzZWnGZfQVNc"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# GPU Check\n",
-        "This section checks whether the GPU is in use or not."
-      ],
-      "metadata": {
-        "id": "TylfoKwOZI4d"
-      }
     },
     {
       "cell_type": "markdown",
@@ -123,8 +113,89 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TylfoKwOZI4d"
+      },
+      "source": [
+        "# GPU Check\n",
+        "This section checks whether the GPU is in use or not."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5b70ba0a-daff-4b8f-c4d6-f60c1b1f1d6b",
+        "id": "RI9WzVhURaxu"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "You are using GPU.\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "num_gpu_available = len(tf.config.list_physical_devices('GPU'))\n",
+        "if num_gpu_available == 0 :\n",
+        "  print(\"You are not using GPU.\\n\")\n",
+        "else:\n",
+        "  print(\"You are using GPU.\\n\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "386c6bdc-479a-452d-960d-670db7ea9fe6",
+        "id": "McloFWoNRaxv"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tue Jan 17 12:55:11 2023       \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 460.32.03    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
+            "|-------------------------------+----------------------+----------------------+\n",
+            "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+            "|                               |                      |               MIG M. |\n",
+            "|===============================+======================+======================|\n",
+            "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   54C    P8     9W /  70W |      3MiB / 15109MiB |      0%      Default |\n",
+            "|                               |                      |                  N/A |\n",
+            "+-------------------------------+----------------------+----------------------+\n",
+            "                                                                               \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| Processes:                                                                  |\n",
+            "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
+            "|        ID   ID                                                   Usage      |\n",
+            "|=============================================================================|\n",
+            "|  No running processes found                                                 |\n",
+            "+-----------------------------------------------------------------------------+\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Command to run to see the specs of the assigned GPU. (only valid if GPU is in use)\n",
+        "!nvidia-smi"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "YN0JOk11144C"
       },
@@ -172,7 +243,7 @@
         "id": "X8ePbkbWojHs",
         "outputId": "2b9a129e-f654-4044-87d2-4f837d7dcadc"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,7 +268,7 @@
         "id": "hQo4jv1QssA5",
         "outputId": "6744f90a-1718-4a6b-911a-c101c20bde32"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -231,7 +302,7 @@
         "id": "hRp8ClaxQqBL",
         "outputId": "e3af1459-457b-4367-de2c-b7a8090a1d11"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -386,7 +457,7 @@
         },
         "outputId": "0e5a109f-ed11-4f3a-d9e8-2d97dd506a01"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -480,7 +551,7 @@
           "height": 156
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -532,7 +603,7 @@
         },
         "outputId": "59c179ef-2bca-4f27-b723-966fc126ac95"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -820,16 +891,6 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "## Test on the entire test set\n",
-        "In this section the test phase is carried out for the net that has just been trained.\n"
-      ],
-      "metadata": {
-        "id": "vGTasCh5r0n-"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "test_history = model.evaluate(X_test,y_test,batch_size = 8)\n",
@@ -857,7 +918,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Visualizing the confusion matrix\n"
+        "# Visualizing the confusion matrix\n"
       ],
       "metadata": {
         "id": "sD6QVKGVMpBh"
@@ -891,7 +952,7 @@
         "id": "j1yzikI-EfrW"
       },
       "source": [
-        "## Computing classification report and class accuracy"
+        "# Computing classification report and class accuracy"
       ]
     },
     {
@@ -931,7 +992,7 @@
         "id": "Tac-aVro4Krd"
       },
       "source": [
-        "## Saving the model\n",
+        "# Saving the model\n",
         "After training and testing the model we save it for future use."
       ]
     },
@@ -952,7 +1013,7 @@
         "id": "S2M7cmWk94Q9"
       },
       "source": [
-        "## Visualizing model performances\n",
+        "# Visualizing model performances\n",
         "In this section the trained model will be loaded and then its performances will be displayed.\\\n",
         "More specifically:\n",
         "\n",
