--- a/Five_Layers_CNN.ipynb
+++ b/Five_Layers_CNN.ipynb
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "VzZWnGZfQVNc"
       },
@@ -53,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "YN0JOk11144C"
       },
@@ -97,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -125,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -159,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -202,7 +202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "x5oHyCP2Lg4U"
       },
@@ -242,7 +242,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -402,7 +402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -580,7 +580,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -652,7 +652,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "Wnih-C3rQVN7"
       },
@@ -669,7 +669,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "1D4PikmQQVN8"
       },
@@ -688,7 +688,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "SYc2LycpEoKV",
         "outputId": "24976ebf-369a-4d56-832e-94712e67b985",
@@ -801,12 +801,12 @@
       "metadata": {
         "id": "23F88DKAPJGe"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -860,7 +860,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "XidygRtJEdMU",
         "colab": {
@@ -913,6 +913,21 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "### Learning curves analysis\n",
+        "Osservando la learning curve relativa all'accuracy si può notare che:\n",
+        "\n",
+        "* la training accuracy cresce fino all'epoca numero 20 dell'allenamento,dopo la quale la crescita inizia a rallentare fino ad arrivare ad un plateau.  \n",
+        "*  la validation accuracy cresce fino all'epoca 15,dopo la quale la crescita rallenta fino ad arrivare al plateau.\n",
+        "* c'è un distacco costante di circa 0.2 tra la train accuracy e la validation accuracy,elemento su cui si può lavorare per migliorare il modello. Un modo per ridurre il gap fra le due curve e quindi migliorare il modello è quello di fornire più dati,in modo che il modello possa generalizzare meglio e quindi comportarsi meglio sul validation set. Un altro modo è il tuning del dropout e delle regolarizzazioni: ad esempio parametrizzando il dropout i neuroni non impareranno informazioni ridondanti,conservando solo quelle utili.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "84FlRSLgZXRY"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "ONrQkZ_Rx4EG"
       },
@@ -923,7 +938,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -957,7 +972,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -997,6 +1012,20 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "### Confusion matrix analysis\n",
+        "Osservando la confusion matrix si evince che:\n",
+        "* il modello a volte confonde maggiormente le classi \"Angry\",\"Fear\",\"Neutral\" e \"Sad\" fra loro. Ciò è dovuto al fatto che ogni soggetto (sample) nel dataset esprime un'emozione in maniera differente e personale,introducendo ambiguità e rendendo il processo di apprendimento più complicato. Infatti esplorando il dataset si noterà che alcune immagini sono categorizzate in un'emozione,quando invece potrebbero tranquillamente rappresentare altre emozioni.\n",
+        "In più alcune foto mostrano il soggetto solo in parte e avolte hanno una cattiva illuminazione che non lo rende ben visibile.\n",
+        "Una soluzione al problema delle classificazioni errate è quella di agiungere al dataset immagini chiare che non mostrano ambiguità nell'emozione espressa dal soggetto,in questo modo il modello sarebbe in grado di cogliere meglio gli aspetti salienti di ogni emozione.\n",
+        " "
+      ],
+      "metadata": {
+        "id": "pq9pOLLQfqbX"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "j1yzikI-EfrW"
       },
@@ -1006,7 +1035,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1092,7 +1121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "YZBVZt7o4Wts"
       },
@@ -1120,7 +1149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "mF5X_te3FzNn"
       },
@@ -1132,7 +1161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1203,15 +1232,6 @@
         "print(\"Model predictions:\\n\")\n",
         "print_images_with_labels(images,pred)"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Conclusions"
-      ],
-      "metadata": {
-        "id": "WO6FUHBaDkCM"
-      }
     },
     {
       "cell_type": "markdown",
