--- a/VGG16.ipynb
+++ b/VGG16.ipynb
@@ -21,8 +21,7 @@
       "provenance": [],
       "toc_visible": true
     },
-    "gpuClass": "standard",
-    "accelerator": "GPU"
+    "gpuClass": "standard"
   },
   "nbformat_minor": 0,
   "nbformat": 4,
@@ -75,7 +74,7 @@
         "trusted": true,
         "id": "VzZWnGZfQVNc"
       },
-      "execution_count": 58,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -90,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": null,
       "metadata": {
         "id": "YN0JOk11144C"
       },
@@ -134,7 +133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -223,7 +222,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hRp8ClaxQqBL",
-        "outputId": "7294bc98-02de-4abb-f31d-111af183d314"
+        "outputId": "68228c2f-bd7f-4c09-8326-337cff3925ae"
       },
       "execution_count": 3,
       "outputs": [
@@ -379,7 +378,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8f066412-907d-4655-ec5a-58aab99c299f"
+        "outputId": "ab2432ab-4eaa-4628-d6e7-d58aa4d5a2e0"
       },
       "execution_count": 4,
       "outputs": [
@@ -475,7 +474,7 @@
           "height": 156
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -536,41 +535,43 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "31c096b8-5048-417b-f4b7-5fbd18a6bae6"
+        "outputId": "4c99e759-afd3-4504-f7bc-5be923221e74"
       },
-      "execution_count": 74,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Model: \"sequential_14\"\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/vgg16/vgg16_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+            "58889256/58889256 [==============================] - 0s 0us/step\n",
+            "Model: \"sequential\"\n",
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
             "=================================================================\n",
-            " conv2d_14 (Conv2D)          (None, 48, 48, 3)         30        \n",
+            " conv2d (Conv2D)             (None, 48, 48, 3)         30        \n",
             "                                                                 \n",
-            " batch_normalization_26 (Bat  (None, 48, 48, 3)        12        \n",
-            " chNormalization)                                                \n",
+            " batch_normalization (BatchN  (None, 48, 48, 3)        12        \n",
+            " ormalization)                                                   \n",
             "                                                                 \n",
-            " re_lu_26 (ReLU)             (None, 48, 48, 3)         0         \n",
+            " re_lu (ReLU)                (None, 48, 48, 3)         0         \n",
             "                                                                 \n",
-            " dropout_22 (Dropout)        (None, 48, 48, 3)         0         \n",
+            " dropout (Dropout)           (None, 48, 48, 3)         0         \n",
             "                                                                 \n",
             " vgg16 (Functional)          (None, 1, 1, 512)         14714688  \n",
             "                                                                 \n",
             " flatten (Flatten)           (None, 512)               0         \n",
             "                                                                 \n",
-            " dense_24 (Dense)            (None, 512)               262656    \n",
+            " dense (Dense)               (None, 512)               262656    \n",
             "                                                                 \n",
-            " batch_normalization_27 (Bat  (None, 512)              2048      \n",
-            " chNormalization)                                                \n",
+            " batch_normalization_1 (Batc  (None, 512)              2048      \n",
+            " hNormalization)                                                 \n",
             "                                                                 \n",
-            " re_lu_27 (ReLU)             (None, 512)               0         \n",
+            " re_lu_1 (ReLU)              (None, 512)               0         \n",
             "                                                                 \n",
-            " dropout_23 (Dropout)        (None, 512)               0         \n",
+            " dropout_1 (Dropout)         (None, 512)               0         \n",
             "                                                                 \n",
-            " dense_25 (Dense)            (None, 7)                 3591      \n",
+            " dense_1 (Dense)             (None, 7)                 3591      \n",
             "                                                                 \n",
             "=================================================================\n",
             "Total params: 14,983,025\n",
@@ -603,7 +604,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 12,
       "metadata": {
         "id": "7nKvHUOnZOqi"
       },
@@ -620,7 +621,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": null,
       "metadata": {
         "id": "1D4PikmQQVN8"
       },
@@ -673,7 +674,7 @@
         },
         "outputId": "abbdae82-0db7-4d9f-e197-6cbee7b6421d"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -734,19 +735,19 @@
       "metadata": {
         "id": "23F88DKAPJGe"
       },
-      "execution_count": 79,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 7,
       "metadata": {
         "id": "MAVKFSYoxgI8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 621
         },
-        "outputId": "33119f63-4058-44d3-f72b-cb2306a71380"
+        "outputId": "0538e615-d4e8-49ac-843b-35f87fed33d6"
       },
       "outputs": [
         {
@@ -767,7 +768,7 @@
         "\n",
         "# creating the figure\n",
         "acc_lc = plt.figure(figsize = (10,10))\n",
-        "\n",
+        "epochs = 12\n",
         "# plotting training and validation accuracy\n",
         "plt.plot(history[\"accuracy\"])                                                         \n",
         "plt.plot(history['val_accuracy'])  \n",
@@ -793,14 +794,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 8,
       "metadata": {
         "id": "XidygRtJEdMU",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 621
         },
-        "outputId": "9e853607-21ce-47a3-dcb8-17424702ecce"
+        "outputId": "e6403962-9499-48af-f573-012e332997f4"
       },
       "outputs": [
         {
@@ -865,16 +866,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hjDFmw0Tr7IG",
-        "outputId": "0276b920-b4d0-4035-badc-1160b433c8d8"
+        "outputId": "0d891b37-fce5-4056-bc87-475af0b88f90"
       },
-      "execution_count": 82,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "533/533 [==============================] - 5s 9ms/step - loss: 1.4494 - accuracy: 0.6013\n",
-            "Test Loss : 1.449425 , Test Accuracy : 0.601267\n"
+            "533/533 [==============================] - 118s 221ms/step - loss: 1.4495 - accuracy: 0.5989\n",
+            "Test Loss : 1.449515 , Test Accuracy : 0.598920\n"
           ]
         }
       ]
@@ -912,7 +913,7 @@
         },
         "outputId": "1cfac1e9-7256-4300-ca02-31e336846261"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -969,7 +970,7 @@
         },
         "outputId": "c3f24504-aa21-4627-f94f-9670400dfd09"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1025,7 +1026,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": null,
       "metadata": {
         "id": "YZBVZt7o4Wts"
       },
@@ -1053,7 +1054,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 14,
       "metadata": {
         "id": "mF5X_te3FzNn"
       },
@@ -1065,7 +1066,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": null,
       "metadata": {
         "id": "7qtpJ8aDABy2",
         "colab": {
