--- a/Five_Layers_CNN.ipynb
+++ b/Five_Layers_CNN.ipynb
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "VzZWnGZfQVNc"
       },
@@ -53,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "YN0JOk11144C"
       },
@@ -97,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -125,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -177,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -220,7 +220,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "x5oHyCP2Lg4U"
       },
@@ -260,7 +260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -413,7 +413,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -591,7 +591,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -663,7 +663,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "Wnih-C3rQVN7"
       },
@@ -680,7 +680,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "1D4PikmQQVN8"
       },
@@ -699,7 +699,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "SYc2LycpEoKV",
         "outputId": "f4e568f8-1882-4b3b-d574-a76b3071c256",
@@ -780,12 +780,12 @@
       "metadata": {
         "id": "23F88DKAPJGe"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -842,9 +842,9 @@
       "source": [
         "Osservando la learning curve relativa all'accuracy si può notare che:\n",
         "\n",
-        "* la training accuracy cresce fino all'epoca numero 20 dell'allenamento,dopo la quale la crescita inizia a rallentare fino ad arrivare ad un plateau.  \n",
-        "*  la validation accuracy cresce fino all'epoca 15,dopo la quale la crescita rallenta fino ad arrivare al plateau.\n",
-        "* c'è un distacco costante di circa 0.2 tra la train accuracy e la validation accuracy,elemento su cui si può lavorare per migliorare il modello. Un modo per ridurre il gap fra le due curve e quindi migliorare il modello è quello di fornire più dati,in modo che il modello possa generalizzare meglio e quindi comportarsi meglio sul validation set. Un altro modo è il tuning del dropout e delle regolarizzazioni: ad esempio parametrizzando il dropout i neuroni non impareranno informazioni ridondanti,conservando solo quelle utili.\n",
+        "* la training accuracy cresce fino all'epoca numero 11 dell'allenamento,dopo la quale l'allenamento è stato fermato per evitare il fenomeno dell'overfitting.\n",
+        "*  la validation accuracy cresce fino all'epoca 10,dopo la quale inizia a decrescere,motivo per cui l'allenamento è stato fermato,in modo da evitare overfitting.\n",
+        "* c'è un distacco costante di circa 0.15 tra la train accuracy e la validation accuracy,elemento su cui si può lavorare per migliorare il modello. Un modo per ridurre il gap fra le due curve e quindi migliorare il modello è quello di fornire più dati,in modo che il modello possa generalizzare meglio e quindi comportarsi meglio sul validation set. Un altro modo è il tuning del dropout e delle regolarizzazioni: ad esempio parametrizzando il dropout i neuroni non impareranno informazioni ridondanti,conservando solo quelle utili.\n",
         "\n"
       ],
       "metadata": {
@@ -853,7 +853,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "XidygRtJEdMU",
         "colab": {
@@ -906,6 +906,18 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "Osservando la learning curve relativa alla loss si può notare che:\n",
+        "\n",
+        "* training loss e validation loss descrescono fino all'epoca 11,dopo la quale l'allenamento è stato interrotto per il raggiungimento del plateau.\n",
+        "* un modo per ridurre il gap tra le due curve è quello di fare tuning del dropout ed aumentare il dataset."
+      ],
+      "metadata": {
+        "id": "oST5Fpd4xccY"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "ONrQkZ_Rx4EG"
       },
@@ -916,7 +928,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -950,7 +962,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -996,7 +1008,7 @@
         "* il modello a volte confonde maggiormente le classi \"Angry\",\"Fear\",\"Neutral\" e \"Sad\" fra loro. Ciò è dovuto al fatto che ogni soggetto (sample) nel dataset esprime un'emozione in maniera differente e personale,introducendo ambiguità e rendendo il processo di apprendimento più complicato. Infatti esplorando il dataset si noterà che alcune immagini sono categorizzate in un'emozione,quando invece potrebbero tranquillamente rappresentare altre emozioni.\n",
         "In più alcune foto mostrano il soggetto solo in parte e avolte hanno una cattiva illuminazione che non lo rende ben visibile.\n",
         "Una soluzione al problema delle classificazioni errate è quella di agiungere al dataset immagini chiare che non mostrano ambiguità nell'emozione espressa dal soggetto,in questo modo il modello sarebbe in grado di cogliere meglio gli aspetti salienti di ogni emozione.\n",
-        " "
+        "* la scelta di aumentare il dataset per le classi disgust e surprise è stata una buona scelta,in quanto il modello è riuscito a generalizzare meglio su queste classi."
       ],
       "metadata": {
         "id": "pq9pOLLQfqbX"
@@ -1013,7 +1025,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1089,6 +1101,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "Dal classification report si evince che il modello è diventato più preciso sulle classi sbilanciate (portando la precision di queste a livello delle altre). In più,guardando al recall si nota che la data augmentation sulle classi sbilanciate ha portato il modello ad essere più sensibile a queste. In sintesi ciò dimostra che aumentare il dataset è stata un buona scelta e che sia la soluzione per migliorare il modello. Si potrebbe aumentare il dataset sia articolando più trasformazioni sulle immagini sia introducendo sample nuovi."
+      ],
+      "metadata": {
+        "id": "AufqLEPP1oW4"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "Tac-aVro4Krd"
       },
@@ -1099,7 +1120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "YZBVZt7o4Wts"
       },
@@ -1127,7 +1148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "mF5X_te3FzNn"
       },
@@ -1139,7 +1160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1234,7 +1255,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1387,7 +1408,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1570,7 +1591,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1634,7 +1655,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "R3FZGSzp6-7H"
       },
@@ -1651,7 +1672,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1903,7 +1924,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1950,7 +1971,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1984,7 +2005,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "V80wjGzoDxDC",
         "colab": {
@@ -2043,7 +2064,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2129,7 +2150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "lC_TslzZ83Wn"
       },
@@ -2157,7 +2178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "GbretHWEGk3m"
       },
@@ -2169,7 +2190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "ogtjB6s8Ghf0",
         "colab": {
