--- a/VGG16.ipynb
+++ b/VGG16.ipynb
@@ -74,7 +74,7 @@
         "trusted": true,
         "id": "VzZWnGZfQVNc"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -224,7 +224,7 @@
         "id": "hRp8ClaxQqBL",
         "outputId": "68228c2f-bd7f-4c09-8326-337cff3925ae"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -380,7 +380,7 @@
         },
         "outputId": "ab2432ab-4eaa-4628-d6e7-d58aa4d5a2e0"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -537,7 +537,7 @@
         },
         "outputId": "4c99e759-afd3-4504-f7bc-5be923221e74"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -604,7 +604,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "7nKvHUOnZOqi"
       },
@@ -735,12 +735,12 @@
       "metadata": {
         "id": "23F88DKAPJGe"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "MAVKFSYoxgI8",
         "colab": {
@@ -793,8 +793,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Analizzando la learning curve relativa all'accuracy si evince che:\n",
+        "* la training accuracy cresce fino all'epoca 11\n",
+        "* la validation accuracy cresce fino all'epoca 11,dopo la quale si è scelto di fermare l'allenamento per evitare il fenomeno dell'overfitting.\n",
+        "* per ridurre il gap tra le due curve e migliorare il modello(quindi avvicinare le due accuracy) si può fare tuning del dropout rate e delle regolarizzazioni,ma la scelta migliore è quella di introdurre più sample per permettere al modello di generalizzare meglio."
+      ],
+      "metadata": {
+        "id": "Q3WD9qPR1_UP"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "XidygRtJEdMU",
         "colab": {
@@ -849,6 +861,18 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Analizzando la learning curve relativa alla loss si nota che:\n",
+        "* la training loss scende fino all'epoca 11\n",
+        "* la validation loss scende fino all'epoca 11,dopo la quale,si è scelto di interrompere l'allenamento per evitare l'overfitting (dopo vari tentativi è emerso che dopo l'epoca 11 la training loss continua a scendere,mentre la validation loss comincia a salire).\n",
+        "* per ridurre il gap e migliorare il modello si può fare ulteriore tuning degli iperparametri ed inoltre introdurre più dati.\n"
+      ],
+      "metadata": {
+        "id": "czQ_9K2M2qSq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Testing the VGG16"
       ],
       "metadata": {
@@ -868,7 +892,7 @@
         "id": "hjDFmw0Tr7IG",
         "outputId": "0d891b37-fce5-4056-bc87-475af0b88f90"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -928,6 +952,20 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Osservando la confusion matrix si evince che:\n",
+        "\n",
+        "*il modello a volte confonde maggiormente le classi \"Angry\",\"Fear\",\"Neutral\" e \"Sad\" fra loro. Ciò è dovuto al fatto che ogni soggetto (sample) nel dataset esprime un'emozione in maniera differente e personale,introducendo ambiguità e rendendo il processo di apprendimento più complicato. Infatti esplorando il dataset si noterà che alcune immagini sono categorizzate in un'emozione,quando invece potrebbero tranquillamente rappresentare altre emozioni.\n",
+        "In più alcune foto mostrano il soggetto solo in parte e avolte hanno una cattiva illuminazione che non lo rende ben visibile. Una soluzione al problema delle classificazioni errate è quella di agiungere al dataset immagini chiare che non mostrano ambiguità nell'emozione espressa dal soggetto,in questo modo il modello sarebbe in grado di cogliere meglio gli aspetti salienti di ogni emozione.\n",
+        "\n",
+        "*la scelta di aumentare il dataset per le classi disgust e surprise è stata una buona scelta,in quanto il modello è riuscito a generalizzare meglio su queste classi."
+      ],
+      "metadata": {
+        "id": "F9d-nl2D3jxR"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1016,6 +1054,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "Dal classification report si evince che il modello è diventato più preciso sulle classi sbilanciate (portando la precision di queste a livello delle altre). In più,guardando al recall si nota che la data augmentation sulle classi sbilanciate ha portato il modello ad essere più sensibile a queste. In sintesi ciò dimostra che aumentare il dataset è stata un buona scelta e che sia la soluzione per migliorare il modello. Si potrebbe aumentare il dataset sia articolando più trasformazioni sulle immagini sia introducendo sample nuovi."
+      ],
+      "metadata": {
+        "id": "b1AHFF5u3sae"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "Tac-aVro4Krd"
       },
@@ -1054,7 +1101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "mF5X_te3FzNn"
       },
